crates/lattice-sim/tests/ui/removed_apis.rs
use lattice_direct_link::DirectLink;
use lattice_rpc::PlacementCoordinatorClient;
use lattice_placement::{ActorEpochFloor, ExplicitPlacement, PlacementTombstone};

fn main() {}
